fix shop overflow

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ section.offer {
     font-size: 11px;
     width: 30%;
     color: black;
-    margin-top: 26%;
+    margin-top: 20%;
     cursor: pointer;
 }
 .shop a {
